2003-01-30  Alexandre Oliva  <aoliva@redhat.com>

	* config/fp-bit.h (__make_dp): Declare if TMODES.

2003-01-29	Steve Ellcey <sje@cup.hp.com>

	* config/ia64/ia64.c (ia64_rwreloc_section_type_flags): New.
	* config/ia64/hpux.h (TARGET_SECTION_TYPE_FLAGS): New.

2003-01-29	Steve Ellcey <sje@cup.hp.com>

        * config/ia64/ia64.c (ia64_rwreloc_select_rtx_section): Rename
        from ia64_aix_select_rtx_section.
        (ia64_rwreloc_select_section): Simlarly; use default*_1 function
        instead of saving and restoring flag_pic.
        (ia64_rwreloc_unique_section): Similarly.
        * config/ia64/aix.h (TARGET_ASM_SELECT_SECTION,
        TARGET_ASM_UNIQUE_SECTION, TARGET_ASM_SELECT_RTX_SECTION): Update.
        * config/ia64/hpux.h (TARGET_ASM_SELECT_SECTION,
        TARGET_ASM_UNIQUE_SECTION, TARGET_ASM_SELECT_RTX_SECTION): New.

2003-01-29	Joel Sherrill <joel@OARcorp.com>

	* gthr-rtems.h: Define __GTHREAD_MUTEX_INIT.  Apparently no code
	depended on it being defined until now. This was tracked as PR9296.

2003-01-13	Joel Sherrill <joel@OARcorp.com>

	* config/mips/rtems.h: Predefine __USE_INIT_FINI__ so generic
	RTEMS code knows which C++ initialization style the toolset
	configuration is using. This was tracked as PR9295.

2003-01-29	Joel Sherrill <joel@OARcorp.com>

	* config/m68k/t-crtstuff: Replace spaces with tabs, add 
	 $(MULTILIB_CFLAGS) as compiler option and multilib crtbegin/end.o.
	This issue was tracked as PR9293.

2003-01-29	Joel Sherrill <joel@OARcorp.com>

	* config.gcc (hppa1.1-rtems):  Did not include t-rtems nor enable
	RTEMS threads.
	* config/pa/rtems.h (LIB_SPEC): Use -N when linking.
	This issue was tracked as PR9292.

2003-01-25  Andrew Haley  <aph@redhat.com>

	* tree-inline.c (walk_tree): Add CHAR_TYPE.

2003-01-28  Christian Cornelssen  <ccorn@cs.tu-berlin.de>

	* doc/install.texi: Add documentation for installation into
	tooldirs and with DESTDIR.

2003-01-28  Andreas Schwab  <schwab@suse.de>
